# LLama-Cpp-Launcher

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  update-v1.0.2-release-notes.yml
scripts/: extract-release-notes.mjs
src/: App.tsx  helpContent.ts  presets.tsx  styles.css  themes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  config.rs  gguf.rs  health.rs  hf.rs  llama_update.rs  main.rs  models.rs  open_webui.rs  process_util.rs  resources.rs  server.rs  state.rs
src/components/: HeaderMemoryStats.tsx  HelpPanel.tsx  HfDownloadPanel.tsx  LlamaCppUpdatePanel.tsx  LogPanel.tsx  ModelSelectionPanel.tsx  OpenWebuiPanel.tsx  OpenWebuiUpdatePanel.tsx  ServerSettingsPanel.tsx  SettingsPanel.tsx
src/hooks/: useHfDownload.ts  useLlamaCppUpdate.ts  useLlamaServer.ts  useModelLibrary.ts  useOpenWebui.ts  usePersistedConfig.ts  useResourceStats.ts  useToast.ts
src/utils/: config.ts  startup.ts
